--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container container-welcome">
-      <div class="welcome-login"><a class="welcome-login-btn" href="#">Авторизоваться</a></div>
+      <div class="welcome-login"><a class="welcome-login-btn" href="/login.html">Авторизоваться</a></div>
       <div class="welcome-center">
         <div><img class="welcome-center-foto" src="assets/images/img/Alex.jpeg" alt="Александр Смирнов"></div><span class="welcome-center-name">Александр Смирнов</span><span class="welcome-center-title">Личный сайт веб разработчика</span>
         <div>
